2002-09-12 garlick
	* Reordered ChangeLog in reverse chronological order.

2002-09-12 garlick
	* Repair a file descriptor leak in rcp_thread  (gnat pdsh/113)
	* More error reporting in qswutil.c, qcmd.c, qshd.c
	* Fixed bug in sending of long bitmaps.
	* Taggged pdsh-1-7-2chaos (sent to LNXI for MCR)

2002-09-03 grondo
	* Automake-ified
	* Have `dshbak -c' generate bracketed ranges compatible with pdsh -w
	* Updated testsuite for compatibility with bracketed host ranges

2002-08-12 garlick
	* Make all static "helper" functions underbar-prefixed.

2002-08-11 garlick
	* If no genders, mpich machines, or SDR, allow configuration, but 
	  pdsh -a generates an error.
	* Fix SDR wcoll generation to use hostlist package.
	* Fixed --enable-debug option in configure.ac.
	* Removed range operator configurability altogether.
	* Enable "reckless hostrange expansion" (foo1-4 style ranges) for AIX


2002-08-10 garlick
	* Broke TODO out of ChangeLog
	* Removed aborted attempt at QsNet cleanup (libqsw dir)
	* Added support for Mark's hostlist.[ch].
	* Added COPYING and added GPL headers to source modules.
	* Removed code that deleted unreachable hosts from the target list in
	  interactive mode.  This didn't work because we fork for each
	  round.  Got rid of -c option which was used to disable this behavior.
	  As this has not worked for a long time, probably won't be missed.
	* Handle arbitrarily large cap->Bitmap in qcmd/qshd protocol.
	* Taggged pdsh-1-7-1chaos

2002-08-10 addy@quadrics.com (via garlick)
	* Removed garlick's conditional support for new driver
	  (addy's changes below are more complete)
	* ELAN_CAPABILITY has had the Generation element name changed. 
	  This change should be backwards compatible to older headers.
	* libelan now requires ELAN_CAP_TYPE_BROADCASTABLE to be always set 
	  as it supports segmented broadcast.
	* The elan3_create() code needed work to sync up with the new ioctl 
	  based device interface.