@@ -6,4 +6,4 @@
   Meta:		1
   Name:		pdsh
   Version:	1.7
-  Release:	2chaos
+  Release:	3chaos
